# oppo-control-tauri

./: oppo_ws_bridge.py  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: oppoctl-cpp-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: DashboardView.tsx  DevToolsView.tsx  GesturesView.tsx  SettingsView.tsx  Sidebar.tsx  Silhouette.tsx
src/stores/: useEarbudStore.ts  useTraceStore.ts
