[package]
name = "oppo-control-tauri"
version = "0.1.0"
description = "OPPO Enco Buds3 Pro Desktop Companion (Tauri v2)"
authors = ["Swastik"]
edition = "2021"

[lib]
name = "oppo_control_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
